--- a/client/src/layouts/Footer/Footer.module.css
+++ b/client/src/layouts/Footer/Footer.module.css
@@ -3,42 +3,45 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  box-sizing: content-box;
+  box-sizing: border-box;
   flex-wrap: wrap;
   height: fit-content;
-  padding: 0.75rem 1.5rem; /* Left/Right padding keeps things off screen walls */
+  padding: 0.75rem 1.5rem;
   margin-top: auto;
   background-color: rgb(180, 193, 234);
   font-size: var(--medium-font-size);
+  width: 100%;
 }
+
 .footer a {
   cursor: pointer;
   color: rgb(91, 86, 86);
   text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
-  transition: 0.2s all ease-in-out;
+  transition: transform 0.2s ease-in-out;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
 }
+
 .stackUsed {
   text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
-  transition: 0.2s all ease-in-out;
   color: rgb(91, 86, 86);
-
   gap: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .topIcon {
   width: 2rem;
   height: 2rem;
 }
+
 .icon {
   width: 2rem;
   height: 2rem;
-  transition: 0.2s transform ease-out;
+  transition: transform 0.2s ease-out;
   filter: invert(99%) sepia(1%) saturate(2975%) hue-rotate(190deg)
     brightness(94%) contrast(108%);
 }
@@ -56,12 +59,11 @@
 }
 
 @media screen and (max-width: 722px) {
-  /* On small screens, transition to a clean, centered vertical stack */
   .footer {
-    width: 100%;
+    flex-direction: column;
+
     padding: 1.5rem 0;
     text-align: center;
-    font-size: var(--medium-font-size);
     gap: 2rem;
   }
 
@@ -73,6 +75,6 @@
   }
 
   .sourceCredit {
-    gap: 1.5rem; /* Reduced gap so it looks compact when columns align */
+    gap: 1.5rem;
   }
 }
