--- a/client/src/pages/AddManga/AddManga.module.css
+++ b/client/src/pages/AddManga/AddManga.module.css
@@ -1,5 +1,4 @@
 .container {
-  padding-top: 5rem;
   min-height: 100dvh;
   width: 100%;
   display: flex;
