--- a/client/src/pages/Details/Details.module.css
+++ b/client/src/pages/Details/Details.module.css
@@ -15,7 +15,6 @@
   align-items: flex-start;
   gap: 2.5rem;
   background-color: rgb(180, 193, 234);
-  margin-top: 5rem;
   padding: 2rem;
   border: 1px solid rgba(100, 115, 160, 0.4);
   border-radius: 16px;
